[package]
name = "qapp"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to manage open macOS applications"
authors = ["Your Name"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
crossterm = "0.27"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
unicode-width = "0.1"
